<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:title="@string/pref_3"
        android:icon="@drawable/earth2"
        android:summary="@string/pref_3_summary"
        android:key="settings_start" />

    <Preference
        android:title="@string/pref_5"
        android:icon="@drawable/delete"
        android:summary="@string/pref_5_summary"
        android:key="settings_close" />



    <Preference
        android:title="@string/pref_2"
        android:icon="@drawable/settings"
        android:summary="@string/pref_2_summary"
        android:key="settings_app" />




    <PreferenceCategory
        android:title="@string/pref_1">

        <Preference
            android:title="@string/action_license"
            android:icon="@drawable/information_outline"
            android:summary="@string/action_license_summary"
            android:key="license" />

    </PreferenceCategory>


</PreferenceScreen>